--- a/ASP.NET Core MVC Identity.NET6/Views/ThreeJS/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/ThreeJS/Index.cshtml
@@ -61,10 +61,10 @@
 
     window.addEventListener('resize', onWindowResize, false)
     function onWindowResize() {
-        camera.aspect = window.innerWidth / window.innerHeight
-        camera.updateProjectionMatrix()
+        camera.aspect = window.innerWidth / window.innerHeight;
+        camera.updateProjectionMatrix();
         renderer.setSize(window.innerWidth, window.innerHeight)
-        render()
+        render();
     }
 
 
